2011-10-05  Jer Noble  <jer.noble@apple.com>

        WEB_AUDIO does not compile on Leopard 32-bit.
        https://bugs.webkit.org/show_bug.cgi?id=69292

        Reviewed by Simon Fraser.

        No new tests; covered by all existing audio tests.

        Use of float and double within the WEB_AUDIO implementation have been harmonized, with most
        calculations done using floats, with narrowPrecisionToFloat() added when necessary to
        narrow double results down to floats, and with float constants initialized with float values:
        * platform/audio/AudioBus.cpp:
        (WebCore::AudioBus::AudioBus):
        (WebCore::AudioBus::createByMixingToMono):
        * platform/audio/AudioBus.h:
        (WebCore::AudioBus::sampleRate):
        (WebCore::AudioBus::setSampleRate):
        * platform/audio/AudioDSPKernel.h:
        (WebCore::AudioDSPKernel::AudioDSPKernel):
        (WebCore::AudioDSPKernel::sampleRate):
        * platform/audio/AudioDSPKernelProcessor.cpp:
        (WebCore::AudioDSPKernelProcessor::AudioDSPKernelProcessor):
        * platform/audio/AudioDSPKernelProcessor.h:
        * platform/audio/AudioDestination.h:
        * platform/audio/AudioFileReader.h:
        * platform/audio/AudioProcessor.h:
        (WebCore::AudioProcessor::AudioProcessor):
        (WebCore::AudioProcessor::sampleRate):
        * platform/audio/AudioUtilities.cpp:
        (WebCore::AudioUtilities::decibelsToLinear):
        (WebCore::AudioUtilities::linearToDecibels):
        (WebCore::AudioUtilities::discreteTimeConstantForSampleRate):
        * platform/audio/AudioUtilities.h:
        * platform/audio/DynamicsCompressor.cpp:
        (WebCore::DynamicsCompressor::DynamicsCompressor):
        (WebCore::DynamicsCompressor::initializeParameters):
        (WebCore::DynamicsCompressor::parameterValue):
        (WebCore::DynamicsCompressor::setEmphasisStageParameters):
        (WebCore::DynamicsCompressor::process):
        * platform/audio/DynamicsCompressor.h: