@@ -859,7 +859,7 @@ __ZN7WebCore7IntRect5scaleEf
 __ZN7WebCore7IntRect5uniteERKS0_
 __ZN7WebCore7IntRect9intersectERKS0_
 __ZN7WebCore7IntRectC1ERKNS_9FloatRectE
-__ZN7WebCore7IntSizeC1ERK7_NSSize
+__ZN7WebCore7IntSizeC1ERK6CGSize
 __ZN7WebCore7TextRun19allowsRoundingHacksEv
 __ZN7WebCore7TextRun21s_allowsRoundingHacksE
 __ZN7WebCore7TextRun22setAllowsRoundingHacksEb
@@ -1346,7 +1346,7 @@ __ZNK7WebCore7IntRect10intersectsERKS0_
 __ZNK7WebCore7IntRect8containsERKS0_
 __ZNK7WebCore7IntRectcv6CGRectEv
 __ZNK7WebCore7IntRectcv7_NSRectEv
-__ZNK7WebCore7IntSizecv7_NSSizeEv
+__ZNK7WebCore7IntSizecv6NSRectEv
 __ZNK7WebCore8Document10renderViewEv
 __ZNK7WebCore8Document11completeURLERKN3WTF6StringE
 __ZNK7WebCore8Document13axObjectCacheEv
@@ -1962,4 +1962,9 @@ __ZN7WebCore12ColorChooser7chooserEv
 __ZNK7WebCore12ColorChooser13didChooseColorERKNS_5ColorE
 __ZN7WebCore5ColorC1ERKN3WTF6StringE
 __ZN7WebCore16HTMLInputElement21connectToColorChooserEv
+#endif
+
+#if !defined(NSGEOMETRY_TYPES_SAME_AS_CGGEOMETRY_TYPES)
+__ZN7WebCore7IntSizeC1ERK7_NSSize
+__ZNK7WebCore7IntSizecv7_NSSizeEv
 #endif
